2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php: Resized graph in this view.
	
	Fixed: #3411788

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Added check for flash charts in pdf
	exportation.
	* operation/events/events_validate.php: Removed entities in this 
	view.

	Fixes: #3445106

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup_visuals.php: Added custom logo in visual 
	styles.

	Fixes: #3419712

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events.php: Fixed sound event popup over https.
	
	Fixes: #3443835

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Removed entities in events 
	reports.
	
	Fixes: #3445082

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/functions_reporting.php: Fixed custom graphs in preview 
	 reporting and PDF exportation.
	 
	 Fixes: #3444170

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/snmpconsole/snmp_view.php: Fixed trap validation when
	the trap has Id equal to 1.
	
	Fixes: #3439289

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	godmode/agentes/modificar_agente.php: Changed style in description
	column of this view. 

2011-11-29  Koichiro Kikuchi  <koichiro@rworks.jp>

	* extras/pandora_migrate_v3.2_to_v4.0.sql: Added missing alter statements
	for tnetwork_component table.

2011-11-29  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_ip_api_list.php: Added a new help file.

2011-11-28  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident_detail.php
	operation/integria_incidents/incident.incident.php
	operation/events/events_list.php: Fixed some bugs of the
	create incident from event form included the change of 
	target url when integria incidents are enabled
	bug: 3438251
